Improved information in README.md file